<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/MainBackground"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/rice"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#faf4c0"
                android:drawableTop="@drawable/b"
                android:padding="10sp"
                android:text="@string/Rice"
                android:textColor="#993800" />

            <Button
                android:id="@+id/soup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FAF4C0"
                android:drawableTop="@drawable/h"
                android:padding="10sp"
                android:text="@string/Soup"
                android:textColor="#993800" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/stew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FAF4C0"
                android:layout_weight="1"
                android:drawableTop="@drawable/a"
                android:padding="10sp"
                android:text="@string/Stew"
                android:textColor="#993800" />

            <Button
                android:id="@+id/Noodle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FAF4C0"
                android:layout_weight="1"
                android:drawableTop="@drawable/e"
                android:padding="10sp"
                android:text="@string/Noodle"
                android:textColor="#993800" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/Pots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FAF4C0"
                android:layout_weight="1"
                android:drawableTop="@drawable/g"
                android:padding="10sp"
                android:text="@string/Pots"
                android:textColor="#993800" />

            <Button
                android:id="@+id/Streamed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FAF4C0"
                android:layout_weight="1"
                android:drawableTop="@drawable/f"
                android:padding="10sp"
                android:text="@string/Streamed"
                android:textColor="#993800" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/Roast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FAF4C0"
                android:layout_weight="1"
                android:drawableTop="@drawable/d"
                android:padding="10sp"
                android:text="@string/Roast"
                android:textColor="#993800" />

            <Button
                android:id="@+id/Afforestation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FAF4C0"
                android:layout_weight="1"
                android:drawableTop="@drawable/c"
                android:padding="10sp"
                android:text="@string/Afforestation"
                android:textColor="#993800" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>